--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id=wrapper>
 		<header >
-			<img class="Logo" src="Logo.png" alt="Library System Management" width="150">
+			<img class="Logo" src="Logo.jpeg" alt="Library System Management" width="150">
 		</header>
 	</div>
 </body>
