--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,12 @@
 			<img class="Logo" src="Logo.jpeg" alt="Library System Management" width="150">
 		</header>
 	</div>
+	
+    <div class="container">
+        <h1>Welcome to the Library Management System</h1>
+    </div>
+
+</body>
 </body>
 <footer>
 </footer>
